# MineRL

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  DNagent.py  Dockerfile  Dockerfile.old  LICENSE  README.md  environment.yml  kmeans_actions.ipynb  network.py  replay_buffer (1).py  requirements.txt  run_tests.sh  setup.cfg  setup_data.sh  test_model.ipynb  treechop_actions.py
.github/workflows/: main.yml  pullrequest.yml  python-package-conda.yml
Working RAINBOW/: agent.py  dataloader.py  main.py  replay_buffer.py  utils.py
data/action_sets/: action-set.pickle  actions-Navigate-05.pickle  actions-ObtainDiamond.pickle  actions-ObtainIronPickaxe.pickle  actions-Treechop.pickle  all-actions.pickle
data/vpt_data/: diamond_download_path.json
docker/: build.sh  run.sh
src/actions/: act_test.py  action-set.pickle  action_coverage.txt  action_creator.py  action_extractor.py  action_extractor_non_obf.py  action_quality_tester.py  action_reducer.py  action_viewer.py  actions-Navigate.npy  actions-Navigate.pickle  actions-ObtainDiamond.npy  actions-ObtainDiamond.pickle  actions-ObtainIronPickaxe-05.pickle  actions-ObtainIronPickaxe.npy  actions-ObtainIronPickaxe.pickle  actions-Treechop.npy  (+10 more)
tests/: conftest.py  gen_dummy_data.py  no_test_load_pretrained.py  test_actionwrapper.py  test_agent.py  test_basetrainer.py  test_buffer.py  test_checkpointer.py  test_env_wrapper.py  test_install.py  test_load_pretrained.py  test_model.py  test_pl_pretraining.py  test_segment_tree.py  test_submodel.py  test_termination.py  test_trainer.py  test_utils.py
wandb/: latest-run
(+171 files in other folders)
