[metadata]
name = minerl3161
version = 0.0.1
author = Jade Davis
author_email = jdav0023@student.monash.edu
description = Navigation Environment
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/will-maclean/MineRL
project_urls =
    Bug Tracker = https://github.com/will-maclean/MineRL/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    gym
    minerl

[options.packages.find]
where = src